@startuml Fieldify ERD

hide methods
hide stereotypes

skinparam linetype ortho
skinparam ranksep 80
skinparam nodesep 60

skinparam entity {
  BackgroundColor #FFFFFF
  BorderColor #27500A
  FontSize 12
  FontColor #111111
  HeaderBackgroundColor #27500A
  HeaderFontColor #FFFFFF
  HeaderFontSize 13
  HeaderFontStyle bold
}

skinparam arrow {
  Color #3B6D11
  FontSize 11
  FontColor #444444
}

' ─── Core identity ───────────────────────────────────────────
entity profiles {
  * id : uuid <<PK>>
  --
  * role : text
  * full_name : text
  phone : text
  avatar_url : text
  stripe_customer_id : text
  notifications_enabled : boolean
  * created_at : timestamptz
  * updated_at : timestamptz
}

entity trades {
  * id : serial <<PK>>
  --
  * slug : text
  * display_name : text
  * standard_rate : numeric(6,2)
  * created_at : timestamptz
}

' ─── Professional side ───────────────────────────────────────
entity professional_profiles {
  * id : uuid <<PK>>
  --
  * profile_id : uuid <<FK>>
  * trade_id : integer <<FK>>
  * nif : text
  * verification_status : text
  rejection_reason : text
  * credential_urls : text[]
  bio : text
  * is_available : boolean
  * service_radius_km : integer
  base_location : geography(point,4326)
  lat : float8 <<generated>>
  lng : float8 <<generated>>
  verified_at : timestamptz
  stripe_account_id : text
  * stripe_onboarding_complete : boolean
  * created_at : timestamptz
  * updated_at : timestamptz
}

entity availability_schedules {
  * id : uuid <<PK>>
  --
  * pro_id : uuid <<FK>>
  * day_of_week : smallint
  * start_time : time
  * end_time : time
  * created_at : timestamptz
}

' ─── Job lifecycle ───────────────────────────────────────────
entity service_requests {
  * id : uuid <<PK>>
  --
  * client_id : uuid <<FK>>
  * trade_id : integer <<FK>>
  pro_id : uuid <<FK>>
  * title : text
  * description : text
  * photo_urls : text[]
  * location : geography(point,4326)
  lat : float8 <<generated>>
  lng : float8 <<generated>>
  * address_text : text
  * status : text
  scheduled_at : timestamptz
  accepted_at : timestamptz
  on_my_way_at : timestamptz
  started_at : timestamptz
  completed_at : timestamptz
  cancelled_at : timestamptz
  cancel_reason : text
  * created_at : timestamptz
  * updated_at : timestamptz
}

entity service_request_rejections {
  * pro_id : uuid <<PK,FK>>
  * request_id : uuid <<PK,FK>>
  --
  * created_at : timestamptz
}

' ─── Payments ────────────────────────────────────────────────
entity payment_methods {
  * id : uuid <<PK>>
  --
  * profile_id : uuid <<FK>>
  * stripe_payment_method_id : text
  card_brand : text
  card_last4 : text
  * is_default : boolean
  * created_at : timestamptz
}

entity payments {
  * id : uuid <<PK>>
  --
  * request_id : uuid <<FK>>
  * client_id : uuid <<FK>>
  pro_id : uuid <<FK>>
  * payment_method_id : uuid <<FK>>
  * stripe_payment_intent_id : text
  * amount_authorised : numeric(8,2)
  amount_charged : numeric(8,2)
  platform_fee : numeric(8,2)
  * currency : text
  * status : text
  authorised_at : timestamptz
  captured_at : timestamptz
  payout_at : timestamptz
  * created_at : timestamptz
  * updated_at : timestamptz
}

' ─── Social ──────────────────────────────────────────────────
entity reviews {
  * id : uuid <<PK>>
  --
  * request_id : uuid <<FK>>
  * client_id : uuid <<FK>>
  * pro_id : uuid <<FK>>
  * rating : smallint
  comment : text
  * created_at : timestamptz
}

entity messages {
  * id : uuid <<PK>>
  --
  * request_id : uuid <<FK>>
  * sender_id : uuid <<FK>>
  * content : text
  * type : text
  reschedule_proposed_at : timestamptz
  reschedule_status : text
  reschedule_responded_at : timestamptz
  read_at : timestamptz
  * created_at : timestamptz
}

' ─── Push notifications ───────────────────────────────────────
entity fcm_tokens {
  * id : uuid <<PK>>
  --
  * user_id : uuid <<FK>>
  * token : text
  created_at : timestamptz
}

' ─── Layout hints ────────────────────────────────────────────
together {
  entity profiles
  entity trades
}

together {
  entity professional_profiles
  entity availability_schedules
}

together {
  entity payment_methods
  entity payments
}

together {
  entity reviews
  entity messages
}

together {
  entity fcm_tokens
}

' ─── Relationships ───────────────────────────────────────────

' Identity layer
profiles                ||--o|   professional_profiles  : "extends"
trades                  ||--o{   professional_profiles  : "categorises"
professional_profiles   ||--o{   availability_schedules : "has"

' Job layer
profiles                ||--o{   service_requests       : "client"
profiles                ||--o{   service_requests       : "pro"
trades                  ||--o{   service_requests       : "trade"
service_requests        ||--o{   service_request_rejections : "rejected by"
profiles                ||--o{   service_request_rejections : "rejects"

' Payment layer
profiles                ||--o{   payment_methods        : "has"
payment_methods         ||--o{   payments               : "charged to"
service_requests        ||--o|   payments               : "billed via"

' Social layer
service_requests        ||--o|   reviews                : "reviewed in"
service_requests        ||--o{   messages               : "has"
profiles                ||--o{   messages               : "sends"

' Push notification layer
profiles                ||--o{   fcm_tokens             : "has"

@enduml
